update and improve build

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash.clonedeep": "^4.5.0",
     "moment": "^2.29.4",
     "save-dev": "^0.0.1-security",
+    "terser": "^5.16.1",
     "vform": "^2.1.2",
     "vite-plugin-static-copy": "^0.13.0",
     "vue": "^3.2.38",
@@ -91,8 +92,10 @@
     "vite": "^4.0.2",
     "vite-plugin-chunk-split": "^0.4.7",
     "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-html": "^3.2.0",
     "vite-plugin-imagemin": "^0.6.1",
     "vite-plugin-inspect": "^0.7.12",
+    "vite-plugin-manifest-sri": "^0.1.0",
     "vite-plugin-pages": "^0.28.0",
     "vite-plugin-pages-sitemap": "^1.4.5",
     "vite-plugin-pwa": "^0.14.0",
