--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
         "pusher/pusher-php-server": "^7.2",
         "qcod/laravel-settings": "^1.1",
         "sentry/sentry-laravel": "^3.1",
+        "silviolleite/laravelpwa": "^2.0",
         "socialiteproviders/37signals": "^4.1",
         "socialiteproviders/acclaim": "^4.1",
         "socialiteproviders/apple": "^5.3",
