add html minifier

--- a/.env.example
+++ b/.env.example
@@ -62,6 +62,8 @@ EMAIL_EXCEPTION_SUBJECT=''
 
 JWT_SECRET=
 
+LARAVEL_PAGE_SPEED_ENABLE=true
+
 LARAVEL_HTTP_ERROR_CODE=403
 LARAVEL_LOGGER_ROLES_MIDDLWARE=role:super.admin
 LARAVEL_LOGGER_DISABLE_ROUTES=true
