--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "nesbot/carbon": "^2.63",
         "pusher/pusher-php-server": "^7.2",
         "qcod/laravel-settings": "^1.1",
+        "renatomarinho/laravel-page-speed": "^2.1",
         "sentry/sentry-laravel": "^3.1",
         "silviolleite/laravelpwa": "^2.0",
         "socialiteproviders/37signals": "^4.1",
