--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "vite-plugin-imagemin": "^0.5.3",
     "vite-plugin-inspect": "^0.7.12",
     "vite-plugin-manifest-sri": "^0.1.0",
+    "vite-plugin-minify": "^1.5.2",
     "vite-plugin-pages": "^0.28.0",
     "vite-plugin-pages-sitemap": "^1.4.5",
     "vite-plugin-pwa": "^0.14.0",
