--- a/.env.example
+++ b/.env.example
@@ -62,8 +62,6 @@ EMAIL_EXCEPTION_SUBJECT=''
 
 JWT_SECRET=
 
-LARAVEL_PAGE_SPEED_ENABLE=true
-
 LARAVEL_HTTP_ERROR_CODE=403
 LARAVEL_LOGGER_ROLES_MIDDLWARE=role:super.admin
 LARAVEL_LOGGER_DISABLE_ROUTES=true
@@ -100,6 +98,10 @@ VITE_APP_NAME="${APP_NAME}"
 
 VITE_SERVER_ENABLED=true
 VITE_SERVER_SECURE=false
+
+LARAVEL_PAGE_SPEED_ENABLE=0
+KONAMI_ASTEROIDS_ENABLED=0
+KONAMI_TOASTY_ENABLED=0
 
 # These ALL below will all be seeded but can be changed through the super admin GUI.
 # If they have a value in the database for the field, that field will never seed again.
