--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "moment": "^2.29.4",
     "save-dev": "^0.0.1-security",
     "terser": "^5.16.1",
+    "toasty": "^6.0.3",
     "vform": "^2.1.2",
     "vite-plugin-static-copy": "^0.13.0",
     "vue": "^3.2.38",
     "vue-axios": "^3.5.2",
     "vue-html-secure": "^1.0.10",
+    "vue-konami-code": "^1.0.0",
     "vue-loader": "^17.0.0",
     "vue-router": "^4.1.5",
     "vuex": "^4.0.2",
@@ -62,6 +64,7 @@
     "chart.js": "^4.1.1",
     "core-js": "^3.27.1",
     "cross-env": "^7.0.3",
+    "easter-egg-collection": "^1.4.56",
     "eslint": "^8.31.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
