update octocat, add gh buttons, add vultr referral, update eggs

--- a/.env.example
+++ b/.env.example
@@ -66,6 +66,9 @@ LARAVEL_HTTP_ERROR_CODE=403
 LARAVEL_LOGGER_ROLES_MIDDLWARE=role:super.admin
 LARAVEL_LOGGER_DISABLE_ROUTES=true
 
+VULTR_REFERRAL_ENABLED=false
+VULTR_REFERRAL_LINK=null
+
 # The Sentry IO Settings get overwritten on save through the GUI
 SENTRY_IO_ENABLED=0
 SENTRY_IO_USER_FEEDBACK_ENABLED=0
