--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vite-plugin-static-copy": "^0.13.0",
     "vue": "^3.2.38",
     "vue-axios": "^3.5.2",
+    "vue-github-button": "^3.1.0",
     "vue-html-secure": "^1.0.10",
     "vue-konami-code": "^1.0.0",
     "vue-loader": "^17.0.0",
@@ -52,6 +53,7 @@
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "@tailwindcss/typography": "^0.5.6",
     "@types/node": "^18.11.18",
+    "@vitejs/plugin-basic-ssl": "^1.0.1",
     "@vitejs/plugin-legacy": "^3.0.1",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/compiler-sfc": "^3.2.38",
@@ -97,7 +99,7 @@
     "vite-plugin-chunk-split": "^0.4.7",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-html": "^3.2.0",
-    "vite-plugin-imagemin": "^0.6.1",
+    "vite-plugin-imagemin": "^0.4.6",
     "vite-plugin-inspect": "^0.7.12",
     "vite-plugin-manifest-sri": "^0.1.0",
     "vite-plugin-minify": "^1.5.2",
