--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "optimize": "vite optimize",
     "lint": "eslint --fix resources/js/ --ext .js,.vue",
     "clean": "prettier .  --write",
-    "prod": "eslint --fix resources/js/ --ext .js,.vue && prettier .  --write && node --max_old_space_size=16384 ./node_modules/vite/bin/vite.js optimize && ./node_modules/vite/bin/vite.js build"
+    "prod": "npm install && npm update && eslint --fix resources/js/ --ext .js,.vue && prettier .  --write && node --max_old_space_size=16384 ./node_modules/vite/bin/vite.js optimize && ./node_modules/vite/bin/vite.js build"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.0",
