--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -1,22 +1,10 @@
-name: Generate changelog
-on:
-  release:
-    types: [created, edited]
-
-jobs:
-  generate-changelog:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - uses: BobAnkh/auto-generate-changelog@v1.2.2
-        with:
-          REPO_NAME: 'jeremykenedy/laravel-spa'
-          ACCESS_TOKEN: ${{secrets.GITHUB_TOKEN}}
-          PATH: 'CHANGELOG.md'
-          COMMIT_MESSAGE: 'docs(CHANGELOG): update release notes'
-          TYPE: 'feat:Feature,fix:Bug Fixes,docs:Documentation,refactor:Refactor,perf:Performance Improvements'
-          REGENERATE_COUNT: -1
-          PULL_REQUEST: true
-          BRANCH: 'master'
+- name: "Build Changelog"
+  uses: mikepenz/release-changelog-builder-action@{latest-release}
+  with:
+    configuration: "configuration.json"
+    owner: "jeremykenedy"
+    repo: "laravel-spa"
+    ignorePreReleases: "false"
+    fetchReleaseInformation: "true"
+  env:
+    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
