--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -12,5 +12,5 @@ jobs:
       - uses: actions/first-interaction@v1
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-          issue-message: "Hello, thank you for time. Please make sure the issue is not environment specific. If this is a security issue please email jeremykenedy@gmail.com"
-          pr-message: "👋 Thank you for contributing. Your PR will be reviewed and if all is good it will be merged in. Thank you again ❤️"
+          issue-message: 'Hello, thank you for time. Please make sure the issue is not environment specific. If this is a security issue please email jeremykenedy@gmail.com'
+          pr-message: '👋 Thank you for contributing. Your PR will be reviewed and if all is good it will be merged in. Thank you again ❤️'
